style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Roboto, sans-serif;
}

:root {
    --header: #151515;
    --white: white;
}

html {
    scroll-behavior: smooth;
}

body {
    box-sizing: border-box;
    width: 100vw;
    padding: 0;
    margin: 0;
    overflow-x: hidden;
}

/* Scroll up */
.scroll-up {
    display: none;
    position: fixed;
    right: 15px;
    bottom: 15px;
    /* background-color: #04AA6D; */
    color: green;
    z-index: 1;
    cursor: pointer;
    font-size: 1.3rem;
    transition: all 2s linear;
}

.scroll-up>i {
    font-size: 1.6rem;
}

/* Navbar Style */

nav {
    /* overflow: hidden; */
    position:fixed;
    top: 0;
    width: 100%;
    z-index: 1;
    /* margin-bottom: 10px; */
}

/* Navbar slider */
#mySidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 78px;
    left: 0;
    background-color: #111;
    /* background: linear-gradient(to top, rgb(223, 222, 222), rgb(179, 178, 178) 50%,rgba(238, 238, 238, 0.04) 50%,#333 50%); */
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 10px;
}

#mySidenav a {
    padding: 10px 15px;
    text-decoration: none;
    font-size: .9rem;
    color: white;
    display: block;
    transition: 0.3s;
    text-transform: uppercase;
    text-align: center;
}

.sidenav {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
}

/* Three lines Sidebars */
.bars {
    display: none;
    cursor: pointer;
    font-size: 1.3rem;
    color: white;
}

.bar2 {
    display: none;
}

/* Navbar expanded */
.navbar {
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgba(21, 21, 21, .85);
    color: white;
}

.nav-items {
    display: flex;
    justify-content: space-between;
    align-items: center;

}

.site-name h2 {
    font-family: cursive;
    font-style: italic;
    /* letter-spacing: 1.5px; */
}

.site-name a:hover {
    color: inherit;
}

.navbar>.site-name:hover {
    transform: scale(1.1);
}

.site-name h2>sup {
    font-size: 8px;
    margin-left: 5px;
    padding: 2px 5px;
    background-color: yellow;
    color: black;
    /* font-family: 'Times New Roman', Times, serif; */
    font-style: normal;
}

.nav-items li {
    list-style: none;
    /* margin: 10px; */
    padding: 8px .9rem;
    font-size: .9rem;
    font-weight: 500;
    color: rgba(255, 255, 255, 0.219);
    letter-spacing: 1.5px;
}

.site-name h5 {
    /* word-spacing: px; */
    letter-spacing: 2px;
}

a {
    text-decoration: none;
    color: var(--white);
    transition: 0.3s;
    /* text-transform: capitalize; */
}

/* a:hover {
    color: rgb(92, 232, 92);
} */

.book {
    padding: 0px 20px;
    display: inline-flex;
}

#book button{
    border: 1px solid black;
    padding: 10px 20px;
    background-color: #ffffff;
    color: #151515;
    font-size: .9rem;
    border-radius: 3px;
}
a.cart{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    border: 1px solid black;
    padding: 5px 15px;
    background-color: #ffffff;
    color: #151515;
    font-size: .8rem;
    border-radius: 3px;
    margin-right: 10px;
}
a.cart>p{
    font-weight: 600;
    /* color: rgb(73, 72, 71); */
}

#book button:hover,a.cart:hover , a.cart>p:hover {
    border: 1px solid black;
    background-color: var(--header);
    color: var(--white)
}
.user{
    display: none;
}

/* Main page */
.mainSection {
    margin-top: 80px;
    width: 100vw;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.imageContainer {
    width: 100%;
    height: 63vh;
    background: url('img/img1.jpg') no-repeat;
    color: rgba(80, 77, 77, 0.903);
    text-align: center;
    padding: 0;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    animation: shrink 8s ease-in-out infinite;
    /* overflow: hidden; */
}

@keyframes shrink {
    0% {
        background-size: 100% 100%;
        /* rotate: 0deg; */
    }

    50% {
        /* rotate: deg; */
        background-size: 110% 110%;
    }

    100% {
        background-size: 100% 100%;
    }

}

.imageContainer>* {
    margin: 10px 0;
    line-height: 1.5;
    font-family: serif;
    word-spacing: 2px;
    letter-spacing: 1.5px;
    font-size: 1.1rem;
    /* cursor: pointer; */
}

.imageContainer>h1 {
    font-size: 3rem;
}

hr {
    height: 3px;
}

.mainSection button {
    cursor: pointer;
    padding: 10px 25px;
    background-color: #151515;
    color: white;
    border: 1px solid black;
    border-radius: 3px;
}

.mainSection button:hover {
    border: 1px solid red;
    background-color: red;
    /* color: black; */
}

.about-us {
    /* margin: 0; */
    padding: 80px 100px;
    max-width: 100vw;
    display: grid;
    grid-template-columns: 1fr 1fr;
    flex-direction: column;
    justify-content: center;
    /* background-color: rgba(227, 226, 226, 0.382); */
    background-image: linear-gradient(to right, rgb(225, 223, 223), rgb(232, 227, 227));
}

.image {
    /* border: 5px solid; */
    padding: 50px;
    height: 500px;
    /* background-size: cover; */
}

#content {
    height: 500px;
    padding: 50px;
}

.content {
    max-width: 500px;
    height: 100%;
    padding: 10px 20px 30px 20px;
    border: 2px solid black;
    box-shadow: 20px 20px black;
    overflow: hidden;
}

.content:hover {
    transition: .2s;
    transform: scale(1.01);
}

.image img {
    cursor: pointer;

    overflow: hidden;
    /* padding: 10px 0; */
    border-radius: 5px;
    max-width: 100%;
    height: 100%;
    box-shadow: 10px 10px rgba(0, 0, 0, 0.278);
}

.image img:hover {
    transition: .3s;
    box-shadow: 20px 20px rgba(144, 143, 143, 0.408);
    transform: scale(1.01);
}

.content>h1 {
    padding: 15px;
    font-size: 2.5rem;
}
/* ... */

